syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 298
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message EnterTransPointRegionNotify {
	uint32 scene_id = 15;
	uint32 point_id = 12;
}
